# js/scripts_landing_user.js
@@ -1,31 +1,65 @@
-// const url = "http://saraharch.com/COMP4537/project/flask";
-// const url = "http://127.0.0.1:5000"
 const version = 'v2'
 const url = `https://elainesweb.com/COMP4537/project/${version}/`;
 
 let params = new URLSearchParams(window.location.search);
 let username = params.get("username");
-document.getElementById("username").innerHTML = "Welcome, " + username + "!";
+document.getElementById("username").innerHTML = "Welcome " + username + " !";
 
 window.onload = function() {
   getApiKeyCalls();
 }
 
-const updateUser = () => {
-  
+// toggles the form to edit user info
+const showUserForm = () => {
+  let form = document.getElementById("editUserForm")
+  if (form.style.display == "block"){
+    form.style.display = 'none';
+  } else{
+    form.style.display = "block"
+  }
+}
 
-  `<form id="editUserForm">
-  <label for="userName">Name:</label>
-  <input type="text" id="userName" name="userName" placeholder="Enter your name" required>
+// updates the user info
+const updateUser = (event) => {
+  event.preventDefault();
+  let form = document.getElementById("editUserForm");
+  form.style.display = "block";
+  let newUsername = document.getElementById("userName").value;
+  let newPassword = document.getElementById("userPass").value;
+  let confirmPassword = document.getElementById("userPassConfirm").value;
 
-  <label for="userEmail">Email:</label>
-  <input type="email" id="userEmail" name="userEmail" placeholder="Enter your email" required>
+  if (newPassword != confirmPassword){
+    alert("Passwords do not match");
+    return;
+  }
 
-  <button type="submit">Save Changes</button>
-</form>`
-  
+  let user = {
+    username: newUsername,
+    password: newPassword
+  }
+
+  const xhttp = new XMLHttpRequest();
+  xhttp.withCredentials = true;
+  xhttp.open("PUT", url + `user/update`, true);
+  xhttp.setRequestHeader("Content-Type", "application/json");
+  xhttp.send(JSON.stringify(user));
+  xhttp.onreadystatechange = function() {
+    if (this.readyState == 4) {
+      if (this.status == 200) {
+        alert("Congrats on your new name and password!");
+        form.style.display = "none";
+        form.reset()
+        document.getElementById("username").innerHTML = "Welcome, " + newUsername + "!";
+        
+      }else{
+        console.log(this.status);
+        console.log(this.response);
+      }
+    }
+  }
   
 }
+
 
 const deleteUser =() => {
   
@@ -53,7 +87,6 @@ const getApiKeyCalls = () => {
   xhttp.withCredentials = true;
 
   xhttp.open("GET", url + `apikeycall`, true);
-  // xhttp.setRequestHeader("Content-Type", "image/jpeg");
   xhttp.send();
   xhttp.onreadystatechange = function() {
     console.log(this.readyState)
@@ -63,7 +96,7 @@ const getApiKeyCalls = () => {
         document.getElementById("calls_made").innerHTML = document.getElementById("calls_made").innerHTML + JSON.parse(this.responseText).calls;
         if (JSON.parse(this.responseText).calls > 20){
           document.getElementById("calls_made").style.color = "red";
-          document.getElementById("warning").innerHTML = "Warning, you've maximized your free API calls!";
+          document.getElementById("warning").innerHTML = "Warning you have used up your free API calls!";
       }else{
         console.log(this.status);
         console.log(this.responseText);
@@ -81,10 +114,8 @@ const generateImage = () => {
   document.getElementById("loading-icon").style.display = "block";
 
   xhttp.open("GET", url + `image/${prompt}`, true);
-  // xhttp.setRequestHeader("Content-Type", "image/jpeg");
   xhttp.send();
   xhttp.onreadystatechange = function() {
-    console.log(this.readyState)
     if (this.readyState == 4) {
       document.getElementById("loading-icon").style.display = "none";
       if (this.status == 200) {
