# js/scripts_login.js
@@ -2,16 +2,17 @@ const version = 'v2'
 const url = `https://elainesweb.com/COMP4537/project/${version}`;
 let loggingIn = true;
 
-function swapForm() {
+const swapForm = () => {
+    console.log(loggingIn)
     loggingIn = !loggingIn;
-    document.getElementById('formtype').innerHTML = loggingIn ? 'Login' : 'Register'
+    document.getElementById('formtype').innerHTML = loggingIn ? "Login" : "Register"
     document.getElementById('register_pwd').style.display = loggingIn ? 'none' : 'block';
-    document.getElementById('go').innerHTML = loggingIn ? 'Sign In' : 'Register';
-    document.getElementById('question').innerHTML = loggingIn ? `Don't have an account?` : 'Already have an account?';
-    document.getElementById('switch').innerHTML = loggingIn ? 'Register' : 'Login';
+    document.getElementById('go').innerHTML = loggingIn ? "Sign In" : "Register";
+    document.getElementById('question').innerHTML = loggingIn ? "Don't have an account?" : "Already have an account?";
+    document.getElementById('switch').innerHTML = loggingIn ? "Register": "Login";
 }
 
-function submit(){
+const submit = () => {
     let endpoint = "";
     let xhttp = new XMLHttpRequest();
     xhttp.withCredentials = true;
@@ -21,7 +22,7 @@ function submit(){
 
     if(username && password && password_reenter && !loggingIn){
       if (password != password_reenter){
-        alert("Passwords do not match");
+        alert("Your passwords must match!");
         return;
       }
       endpoint = '/register';
@@ -29,7 +30,7 @@ function submit(){
     }else if(username && password && loggingIn){
       endpoint = '/login'
     }else{
-      alert("Please fill in all fields");
+      alert("You are missing a field");
       return;
     }
    
@@ -45,21 +46,17 @@ function submit(){
         if (this.readyState == 4){
             if (this.status == 201){
               message = JSON.parse(this.responseText);
-              let token = xhttp.getResponseHeader("Authorization");
                 //successful
                 if (message.type === 'admin'){ 
                   window.location.href = `./landing_admin.html?username=${message.username}`;
                 }else if (message.type === 'user'){ 
                   window.location.href = `./landing_user.html?username=${message.username}`;
                 }
-  
             }
             if (this.status == 401){
-              console.log(this.responseText)
-                //login failed
+              let response = JSON.parse(this.responseText);
+              alert(response.message)
             }
         }
     }
 }
-
-
