# swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "Image Generator",
     "description": "Create an image from a text prompt",
-    "version": "2.0"
+    "version": "7.0"
   },
   "servers": [
     {
@@ -11,52 +11,38 @@
     }
   ],
   "paths": {
-    "/login": {
-      "post": {
-        "tags": ["login"],
-        "summary": "Login to the application",
-        "description": "Endpoint 1 Description",
-        "parameters": [
-          {
-            "name": "requestBody",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/RequestModel"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "schema": {
-              "$ref": "#/definitions/ResponseModel"
-            }
-          }
-        }
-      }
-    },
     "/register": {
       "post": {
-        "tags": ["register"],
+        "tags": ["user"],
         "summary": "Register a User",
         "description": "Endpoint 2 Description",
-        "parameters": [
-          {
-            "name": "requestBody",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/RequestModel"
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
+                }
+              }
             }
           }
-        ],
+        },
         "responses": {
-          "200": {
-            "description": "Successful response",
-            "schema": {
-              "$ref": "#/definitions/ResponseModel"
-            }
+          "201": {
+            "description": "Successful response"
+          },
+          "401":{
+            "description": "User is unauthorized"
+          },
+          "500":{
+            "description": "Internal Server Error"
           }
         }
       }
@@ -71,69 +57,218 @@
             "name": "prompt",
             "in": "path",
             "required": true,
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "token",
+            "in": "cookie",
+            "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "Successful response",
-            "schema": {
-              "$ref": "#/definitions/ResponseModel"
-            }
+            "description": "Successful response"
+          },
+          "401":{
+            "description": "User is unauthorized"
+          },
+          "500":{
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/endpoint": {
       "get": {
-        "tags": ["endpoint"],
-        "summary": "Endpoint 4 Summary",
-        "description": "Endpoint 4 Description",
+        "tags": ["request"],
+        "summary": "Gets the number of times an endpoint has been called",
+        "description": "Gets the number of times each endpoint has been called by all users",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "cookie",
+            "required": true
+          }
+        ],
         "responses": {
           "200": {
-            "description": "Successful response",
-            "schema": {
-              "$ref": "#/definitions/ResponseModel"
-            }
+            "description": "Successful response"
+          },
+          "401": {
+            "description": "Unauthorized - Not Logged In"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/apiusages": {
       "get": {
-        "tags": ["apiusages"],
-        "summary": "Get the number of usages of the api",
-        "description": "Endpoint 5 Description",
+        "tags": ["user"],
+        "summary": "Returns the number of api key calls per user",
+        "description": "Gets the number of api key cals for all users, includes each user's apikey",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "cookie",
+            "required": true
+          }
+        ],
         "responses": {
           "200": {
-            "description": "Successful response",
+            "description": "Successful response"
+          },
+          "401": {
+            "description": "User is Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/apikeycall": {
+      "get": {
+        "tags": ["apikeycall"],
+        "summary": "Get the number of usages of the api",
+        "description": "Gets the number of usages for the specific apikey",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "cookie",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response"
+          },
+          "401": {
+            "description": "User is Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/kermitsewerslide": {
+      "delete": {
+        "tags": ["user"],
+        "summary": "Delete the user account",
+        "description": "Delete the user account",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "cookie",
+            "required": true
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "User account deleted"
+          },
+          "401": {
+            "description": "Unauthorized - Not Logged In"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/update": {
+      "put": {
+        "tags": ["user"],
+        "summary": "Edit the user",
+        "description": "Update user information with authentication using old username and password from token cookie, as well as new username and password from the request body",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "cookie",
+            "required": true
+          }, {
+            "name": "requestBody",
+            "in": "path",
+            "required": true,
             "schema": {
-              "$ref": "#/definitions/ResponseModel"
+              "type": "object",
+                "properties": {
+                  "username": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
             }
+          }}
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response"
+          },
+          "401": {
+            "description": "Unauthorized - Not Logged In"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "cookieAuth": []
+          }
+        ],
+        "components": {
+          "securitySchemes": {
+            "cookieAuth": {
+              "type": "apiKey",
+              "in": "cookie",
+              "name": "token"
+            }
+          }
+      }
+    }
+  },
+    "/login": {
+      "post": {
+        "tags": ["user"],
+        "summary": "Login to the application",
+        "description": "Endpoint 1 Description",
+        "parameters": [
+          {
+            "name": "requestBody",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "object",
+                "properties": {
+                  "username": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
+            }
+          }
+        }
+        ],
+        "responses": {
+          "201": {
+            "description": "Successful response"
+          },
+          "401":{
+            "description": "User is unauthorized"
+          },
+          "500":{
+            "description": "Internal Server Error"
           }
         }
       }
     }
-  },
-  "definitions": {
-    "RequestModel": {
-      "type": "object",
-      "properties": {
-        "property1": {
-          "type": "string"
-        },
-        "property2": {
-          "type": "number"
-        }
-      }
-    },
-    "ResponseModel": {
-      "type": "object",
-      "properties": {
-        "message": {
-          "type": "string"
-        }
-      }
-    }
   }
-}
+} 
+
